--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -12,13 +12,13 @@ input {
 
 button {
   padding: 10px;
-  background-color: #4caf50;
+  background-color: #4c86af;
   color: white;
   border: none;
   cursor: pointer;
 }
 
 button:hover {
-  background-color: #45a049;
+  background-color: #59935c;
 }
 
